VP-5 Added responsive fonts and all text styles

--- a/index.html
+++ b/index.html
@@ -53,19 +53,16 @@
     <section id="features">
 
     </section>
-    <section id="features">
-
-    </section>
     <section id="answer-questionnaire">
 
     </section>
     <section id="testimonials">
 
     </section>
-    <section id="gumroad-access">
+    <section id="about">
 
     </section>
-    <section id="gumroad-access">
+    <section id="help-contribute">
 
     </section>
     <footer></footer>
