--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
 <body>
 
     <header>
+        <div class="col-1">
+            <h1>Quanto vale o meu Design?</h1>
+            <p>Uma abordagem prática sobre a formação de preço para projetos criativos.</p>
+            <p>Perfeita para Freelas</p>
+        </div>
+        <div class="col-2">
+            <img src="" alt="">
+        </div>
 
     </header>
     <section id="steps">
@@ -67,6 +75,6 @@
     </section>
     <footer></footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsd
+    elivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
-</html>
