VP-5 Added changes to content

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
     <header>
         <div class="col-1">
+            <p>Planilha Grátis</p>
             <h1>Quanto vale o meu Design?</h1>
             <p>Uma abordagem prática sobre a formação de preço para projetos criativos.</p>
             <p>Perfeita para Freelas</p>
