--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     </section>
     <footer></footer>
 
+    <script src="./js/testimonials.js"></script> 
+    <script src="./js/script.js"></script> <!-- Link to external JavaScript file -->
     <script src="https://cdn.jsd
     elivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
