VP-27 Styling header and steps sections; Cards steps & testimonials added.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 </head>
 <body>
 
-    <header>
+    <header class="">
         <div class="col-1">
-            <p>Planilha Grátis</p>
+            <p class="c-pill c-body-l">Planilha Grátis</p>
             <h1>Quanto vale o meu Design?</h1>
-            <p class="c-light-green-text">Uma abordagem prática sobre a formação de preço para projetos criativos.</p>
-            <p class="c-light-green-text">Perfeita para Freelas</p>
+            <p class="c-light-green-text c-body-xl c-align-left">Uma abordagem prática sobre a formação de preço para projetos criativos.</p>
+            <p class="btn c-light-green-text c-btn-secondary c-body-l">Perfeita para Freelas</p>
         </div>
         <div class="col-2">
             <figure>
@@ -59,7 +59,7 @@
     </header>
     <main>
         <section id="steps">
-            <h2>O preço do seu projeto em apenas 1, 2, 3 passos</h2>
+            <h2 class="mb-5">O preço do seu projeto em apenas 1, 2, 3 passos</h2>
             <div id="steps-container"></div>
         </section>
         <section id="features">
@@ -103,7 +103,7 @@
     </footer>
 
     <script src="./js/testimonials.js"></script> 
+    <script src="./js/steps.js"></script> 
     <script src="./js/script.js"></script> <!-- Link to external JavaScript file -->
-    <script src="https://cdn.jsd
-    elivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
