--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
@@ -68,7 +69,7 @@
         </section>
         <section id="answer-questionnaire">
             <h2>Perfeita para seu projeto criativo. (Seja ele qual for)</h2>
-            <div id="area-tags-container"></div>
+            <ul id="project-types-container"></ul>
             <p class="c-body-xl">Você é quem define o projeto que vai fazer, a metodologia e prazos para cada etapa. Pense na planilha como um quadro em branco que você pode preencher como se sentir mais confortável.</p>
             <p>Gostaria de ter templates de projetos?</p>
             <button class="c-btn"><img src="./img/icon_questionario.png">Responda ao nosso questionário</button>
@@ -104,6 +105,7 @@
 
     <script src="./js/testimonials.js"></script> 
     <script src="./js/steps.js"></script> 
+    <script src="./js/projectTypes.js"></script> 
     <script src="./js/script.js"></script> <!-- Link to external JavaScript file -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
