--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 
-    <header class="">
+    <header class="c-mg-left">
         <div class="col-1">
             <p class="c-pill c-body-l">Planilha Grátis</p>
             <h1>Quanto vale o meu Design?</h1>
@@ -59,18 +59,45 @@
         </div>    
     </header>
     <main>
-        <section id="steps">
+        <section id="steps" class="c-mg-horizontal">
             <h2 class="mb-5">O preço do seu projeto em apenas 1, 2, 3 passos</h2>
             <div id="steps-container"></div>
         </section>
-        <section id="features">
-            <h2>Muito mais que uma planilha</h2>
-            <div id="features-container"></div>
+        <section id="features" class="c-mg-horizontal">
+            <h2 class="mb-5">Muito mais que uma planilha</h2>
+            <div id="features-container">
+                <div class="features-card">
+                    <img src="./img/icon_watch.png" alt="">
+                    <div class="content-container">
+                        <p class="c-body-l">Obtenha seu preço em tempo real e <strong>embasado pelo seu processo</strong> de trabalho</p>
+                    </div>
+                </div>
+                <div class="features-card">
+                    <img src="./img/icon_tag.png" alt="">
+                    <div class="content-container">
+                        <p class="c-body-l">Desmistifica o tabu sobre preço no design</p>
+                    </div>
+                </div>
+                <div class="features-card">
+                    <img src="./img/icon_academic.png" alt="">
+                    <div class="content-container">
+                        <p class="c-body-l"><strong>Ajuda jovens designers (e não só) a entenderem o valor do seu trabalho</strong> e a defenderem o seu preço com base em dados reais</p>
+                    </div>
+                </div>
+                <div class="features-card">
+                    <img src="./img/Icons_video.png" alt="">
+                    <div class="content-container">
+                        <p class="c-body-l">Ainda não sabe bem como funciona?</p>
+                        <p class="c-body-l">Assita à Demo no nosso canal do YouTube e descubra todos os detalhes</p>
+                    </div>
+                </div>
+                <img class="gumroad-cover" src="./img/cover_image_desktop.png" alt="printscreen of gumroad cover">
+            </div>
         </section>
         <section id="answer-questionnaire">
-            <h2>Perfeita para seu projeto criativo. (Seja ele qual for)</h2>
-            <ul id="project-types-container"></ul>
-            <p class="c-body-xl">Você é quem define o projeto que vai fazer, a metodologia e prazos para cada etapa. Pense na planilha como um quadro em branco que você pode preencher como se sentir mais confortável.</p>
+            <h2 class="c-mg-horizontal mb-5">Perfeita para seu projeto criativo. (Seja ele qual for)</h2>
+            <ul id="project-types-container" class="mb-5"></ul>
+            <p class="c-body-xl mb-5">Você é quem define o projeto que vai fazer, a metodologia e prazos para cada etapa. Pense na planilha como um quadro em branco que você pode preencher como se sentir mais confortável.</p>
             <p>Gostaria de ter templates de projetos?</p>
             <button class="c-btn"><img src="./img/icon_questionario.png">Responda ao nosso questionário</button>
         </section>
