VP-27 Added styling and new card sections to testimonials

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
             <p>Gostaria de ter templates de projetos?</p>
             <button class="c-btn"><img src="./img/icon_questionario.png">Responda ao nosso questionário</button>
         </section>
-        <section id="testimonials">
-            <h3>Quem já usou, aprovou</h3>
+        <section id="testimonials" class="c-mg-horizontal">
+            <h3 class="mb-5">Quem já usou, aprovou</h3>
             <div id="testimonials-container"></div>
         </section>
         <section id="about">
-            <h2 class="c-light-green-text">Um projeto que nasceu da vontate de compartilhar o que aprendemos com a nossa experiência</h2>
+            <h2 class="c-light-green-text c-mg-horizontal">Um projeto que nasceu da vontate de compartilhar o que aprendemos com a nossa experiência</h2>
             <p class="c-body-l">Em 2010, uma ideia surgiu: criar uma planilha para ajudar nossos alunos a entender a precificação em projetos de design. Essa ferramenta nasceu com a missão de desmistificar a complexidade do design e conscientizar sobre o verdadeiro valor do nosso trabalho.</p>
             <p class="c-body-l">Baseada em nosso método de precificação na Vínculo, a planilha evoluiu ao longo dos anos, ajudando jovens profissionais no Brasil e em Portugal a compreenderem o real valor de seus projetos de design.</p>
             <p class="c-body-l"> Até agora, essa ferramenta esteve disponível apenas para nossos alunos e amigos mais próximos. Mas acreditamos que é hora de compartilhá-la com uma comunidade maior.</p>
