Added non-breaking space

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </section>
     </main>
     <footer>
-        <p class="subtitle-2">Feito com muito carinho pela equipe da  <img src="./img/marca-vinculo.png"></p>
+        <p class="subtitle-2">Feito com muito carinho pela equipe da &nbsp;&nbsp;<img src="./img/marca-vinculo.png"></p>
     </footer>
 
     <script src="./js/testimonials.js"></script> 
