--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         </section>
         <section id="answer-questionnaire">
             <h2 class="c-mg-horizontal mb-5">Perfeita para seu projeto criativo. (Seja ele qual for)</h2>
+            <br>
             <ul id="project-types-container" class="mb-5"></ul>
+            <br>
             <p class="c-body-xl mb-5">Você é quem define o projeto que vai fazer, a metodologia e prazos para cada etapa. Pense na planilha como um quadro em branco que você pode preencher como se sentir mais confortável.</p>
             <p>Gostaria de ter templates de projetos?</p>
             <button class="c-btn"><img src="./img/icon_questionario.png">Responda ao nosso questionário</button>
@@ -106,7 +108,7 @@
             <div id="testimonials-container"></div>
         </section>
         <section id="about" class="c-pd-section mb-5">
-            <h2 class="c-light-green-text c-mg-horizontal mb-5">Um projeto que nasceu da vontate de compartilhar o que aprendemos com a nossa experiência</h2>
+            <h2 class="c-light-green-text c-mg-horizontal mb-5">Um projeto que nasceu da vontade de compartilhar o que aprendemos com a nossa experiência</h2>
             <p class="c-body-l">Em 2010, uma ideia surgiu: criar uma planilha para ajudar nossos alunos a entender a precificação em projetos de design. Essa ferramenta nasceu com a missão de desmistificar a complexidade do design e conscientizar sobre o verdadeiro valor do nosso trabalho.</p>
             <br>
             <p class="c-body-l">Baseada em nosso método de precificação na Vínculo, a planilha evoluiu ao longo dos anos, ajudando jovens profissionais no Brasil e em Portugal a compreenderem o real valor de seus projetos de design.</p>
@@ -127,6 +129,7 @@
         </section>
         <section id="help-contribute" class="c-pd-section">
             <h2 class="mb-5">Quer ajudar e retribuir?</h2>
+            <br>
             <p  class="c-body-l mb-5">Um projeto como demanda bastante tempo e nós fazemos isso no nosso tempo livre. Para chegarmos à versão da planilha que hoje você tem acesso passamos por várias iterações que sempre buscaram simplificar o seu uso.</p>
             <br>
             <p class="c-body-l mb-5">Como você já sabe, <strong>a planilha é completamente gratuita para todos</strong>. Se você gostou do que viu e quiser colaborar com o nosso projeto, pode nos enviar qualquer quantia que agradeçemos demais Qualquer valor é bem vindo e nos ajuda a continuar melhorando a planilha em versões futuras.</p>
