VP-24 general CSS optimization, adding extra utility classes

--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
         <section id="features" class="c-mg-horizontal">
             <h2 class="mb-5">Muito mais que uma planilha</h2>
             <div id="features-container">
-                <div class="features-card">
+                <div class="features-card bg-dark-green-2">
                     <img src="./img/icon_watch.png" alt="">
                     <div class="content-container">
                         <p class="c-body-l">Obtenha seu preço em tempo real e <strong>embasado pelo seu processo</strong> de trabalho</p>
                     </div>
                 </div>
-                <div class="features-card">
+                <div class="features-card bg-dark-green-2">
                     <img src="./img/icon_tag.png" alt="">
                     <div class="content-container">
                         <p class="c-body-l">Desmistifica o tabu sobre preço no design</p>
                     </div>
                 </div>
-                <div class="features-card">
+                <div class="features-card bg-dark-green-2">
                     <img src="./img/icon_academic.png" alt="">
                     <div class="content-container">
                         <p class="c-body-l"><strong>Ajuda jovens designers (e não só) a entenderem o valor do seu trabalho</strong> e a defenderem o seu preço com base em dados reais</p>
                     </div>
                 </div>
-                <div class="features-card">
+                <div class="features-card bg-dark-green-2">
                     <img src="./img/Icons_video.png" alt="">
                     <div class="content-container">
                         <p class="c-body-l">Ainda não sabe bem como funciona?</p>
@@ -137,7 +137,7 @@
             <button class="c-btn"><a>Acessar nossa página no Gumroad</a></button>
         </section>
     </main>
-    <footer>
+    <footer class="bg-dark-green-2">
         <p class="subtitle-2">Feito com muito carinho pela equipe da &nbsp;&nbsp;<img src="./img/marca-vinculo.png"></p>
     </footer>
 
