VP-6 Added alt to images and corrected CSS and HTML validator errors

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col-2">
             <figure>
-                <img class="c-cover-img" src="./img/cover_image.png" alt="printscreen of gumroad cover">
+                <img class="c-cover-img" src="./img/cover_image.png" alt="Ilustração com diferentes palavras como Identidade Visual, Sinalização, Naming">
             </figure>
         </div>    
     </header>
@@ -67,31 +67,31 @@
             <h2 class="mb-5">Muito mais que uma planilha</h2>
             <div id="features-container">
                 <div class="features-card bg-dark-green-2">
-                    <img src="./img/icon_watch.png" alt="">
+                    <img src="./img/icon_watch.png" alt="Icone de um relógio">
                     <div class="content-container">
                         <p class="c-body-l">Obtenha seu preço em tempo real e <strong>embasado pelo seu processo</strong> de trabalho</p>
                     </div>
                 </div>
                 <div class="features-card bg-dark-green-2">
-                    <img src="./img/icon_tag.png" alt="">
+                    <img src="./img/icon_tag.png" alt="Icone de uma etiqueta">
                     <div class="content-container">
                         <p class="c-body-l">Desmistifica o tabu sobre preço no design</p>
                     </div>
                 </div>
                 <div class="features-card bg-dark-green-2">
-                    <img src="./img/icon_academic.png" alt="">
+                    <img src="./img/icon_academic.png" alt="Icone de um chapéu académico">
                     <div class="content-container">
                         <p class="c-body-l"><strong>Ajuda jovens designers (e não só) a entenderem o valor do seu trabalho</strong> e a defenderem o seu preço com base em dados reais</p>
                     </div>
                 </div>
                 <div class="features-card bg-dark-green-2">
-                    <img src="./img/Icons_video.png" alt="">
+                    <img src="./img/Icons_video.png" alt="Icone de um video do genero youtube">
                     <div class="content-container">
                         <p class="c-body-l">Ainda não sabe bem como funciona?</p>
                         <p class="c-body-l">Assita à Demo no nosso canal do YouTube e descubra todos os detalhes</p>
                     </div>
                 </div>
-                <img class="gumroad-cover" src="./img/cover_image_desktop.png" alt="printscreen of gumroad cover">
+                <img class="gumroad-cover" src="./img/cover_image_desktop.png" alt="printscreen da capa da página do Gumroad">
             </div>
         </section>
         <section id="answer-questionnaire">
@@ -138,7 +138,7 @@
         </section>
     </main>
     <footer class="bg-dark-green-2">
-        <p class="subtitle-2">Feito com muito carinho pela equipe da &nbsp;&nbsp;<img src="./img/marca-vinculo.png"></p>
+        <p class="subtitle-2">Feito com muito carinho pela equipe da &nbsp;&nbsp;<img src="./img/marca-vinculo.png" alt="logo da empresa Vinculo Design"></p>
     </footer>
 
     <script src="./js/testimonials.js"></script> 
