VP-6 Mostly fonts and spacing changes for mobile

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <p class="c-pill c-body-l">Planilha Grátis</p>
             <h1>Quanto vale o meu Design?</h1>
             <p class="c-light-green-text c-body-xl c-align-left">Uma abordagem prática sobre a formação de preço para projetos criativos.</p>
+            <br>
             <p class="btn c-light-green-text c-btn-secondary c-body-l">Perfeita para Freelas</p>
         </div>
         <div class="col-2">
@@ -69,24 +70,28 @@
                 <div class="features-card bg-dark-green-2">
                     <img src="./img/icon_watch.png" alt="Icone de um relógio">
                     <div class="content-container">
+                        <br>
                         <p class="c-body-l">Obtenha seu preço em tempo real e <strong>embasado pelo seu processo</strong> de trabalho</p>
                     </div>
                 </div>
                 <div class="features-card bg-dark-green-2">
                     <img src="./img/icon_tag.png" alt="Icone de uma etiqueta">
                     <div class="content-container">
+                        <br>
                         <p class="c-body-l">Desmistifica o tabu sobre preço no design</p>
                     </div>
                 </div>
                 <div class="features-card bg-dark-green-2">
                     <img src="./img/icon_academic.png" alt="Icone de um chapéu académico">
                     <div class="content-container">
+                        <br>
                         <p class="c-body-l"><strong>Ajuda jovens designers (e não só) a entenderem o valor do seu trabalho</strong> e a defenderem o seu preço com base em dados reais</p>
                     </div>
                 </div>
                 <div class="features-card bg-dark-green-2">
                     <img src="./img/Icons_video.png" alt="Icone de um video do genero youtube">
                     <div class="content-container">
+                        <br>
                         <p class="c-body-l">Ainda não sabe bem como funciona?</p>
                         <p class="c-body-l">Assita à Demo no nosso canal do YouTube e descubra todos os detalhes</p>
                     </div>
@@ -101,6 +106,7 @@
             <br>
             <p class="c-body-xl mb-5">Você é quem define o projeto que vai fazer, a metodologia e prazos para cada etapa. Pense na planilha como um quadro em branco que você pode preencher como se sentir mais confortável.</p>
             <p>Gostaria de ter templates de projetos?</p>
+            <br>
             <button class="c-btn"><img src="./img/icon_questionario.png">Responda ao nosso questionário</button>
         </section>
         <section id="testimonials" class="c-mg-horizontal">
@@ -115,17 +121,13 @@
             <br>
             <p class="c-body-l mb-5"> Até agora, essa ferramenta esteve disponível apenas para nossos alunos e amigos mais próximos. Mas acreditamos que é hora de compartilhá-la com uma comunidade maior.</p>
             <h4 class="c-light-green-text mb-5">Mas por que de graça?</h4>
-            <p class="c-body-l">Para apoiar a comunidade designers de três formas simples:
+            <p class="c-body-l">Para apoiar a comunidade designers de três formas simples:</p>
                 <br>
                 <ol class="c-body-l">
-                    <br>
                     <li>Descomplicar a Precificação: Queremos que todos compreendam a formação de preço em projetos de design, sem a necessidade de tabelas pré-formatadas. Queremos que você se sinta confiante na hora de precificar seu trabalho!</li>
-                    <br>
                     <li>Apoiar Designers Iniciantes: Muitos jovens designers enfrentam desafios na determinação de preços justos para seus projetos. Nossa planilha está aqui para orientá-los.</li>
-                    <br>
                     <li> Valorizar a Profissão de Designer: Acreditamos que o design é uma arte e uma ciência. Nossa missão é promover decisões conscientes e justas.</li>
                 </ol>
-            </p>
         </section>
         <section id="help-contribute" class="c-pd-section">
             <h2 class="mb-5">Quer ajudar e retribuir?</h2>
