VP-6 Added meta description, youtube iframe, links, corrected flexbox for stretch

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <!-- Meta Description -->
-    <meta name="description" content="Description of the page less than 150 characters">
+    <meta name="description" content="Planilha gratuita de precificação para designers. Descomplica a formação de preço em projetos de design, promovendo valorização e apoio à comunidade de designers.">
     <!-- Apple Touch Icon (at least 200x200px) -->
     <link rel="apple-touch-icon" href="/custom-icon.png">
     <!-- To run the web application in full-screen -->
@@ -93,10 +93,14 @@
                     <div class="content-container">
                         <br>
                         <p class="c-body-l">Ainda não sabe bem como funciona?</p>
-                        <p class="c-body-l">Assita à Demo no nosso canal do YouTube e descubra todos os detalhes</p>
+                        <p class="c-body-l">Assista à Demo no nosso canal do YouTube e descubra todos os detalhes</p>
+                        <a class="c-btn btn-assistir-youtube" href="https://www.youtube.com/embed/6_hLrOmS9_M?si=DsXG7rnxSMDscWbv" target="_blank" rel="noopener noreferrer">Assistir agora</a>
                     </div>
                 </div>
-                <img class="gumroad-cover" src="./img/cover_image_desktop.png" alt="printscreen da capa da página do Gumroad">
+                <!--<img class="gumroad-cover" src="./img/cover_image_desktop.png" alt="printscreen da capa da página do Gumroad">-->
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/6_hLrOmS9_M?si=DsXG7rnxSMDscWbv" title="Como preencher minha planilha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
         <section id="answer-questionnaire">
@@ -107,7 +111,7 @@
             <p class="c-body-xl mb-5">Você é quem define o projeto que vai fazer, a metodologia e prazos para cada etapa. Pense na planilha como um quadro em branco que você pode preencher como se sentir mais confortável.</p>
             <p>Gostaria de ter templates de projetos?</p>
             <br>
-            <button class="c-btn"><img src="./img/icon_questionario.png">Responda ao nosso questionário</button>
+            <a class="c-btn" target="_blank" rel="noopener noreferrer"><img src="./img/icon_questionario.png" alt="Icone de questionário">Responda ao nosso questionário</a>
         </section>
         <section id="testimonials" class="c-mg-horizontal">
             <h3 class="mb-5">Quem já usou, aprovou</h3>
@@ -136,7 +140,7 @@
             <br>
             <p class="c-body-l mb-5">Como você já sabe, <strong>a planilha é completamente gratuita para todos</strong>. Se você gostou do que viu e quiser colaborar com o nosso projeto, pode nos enviar qualquer quantia que agradeçemos demais Qualquer valor é bem vindo e nos ajuda a continuar melhorando a planilha em versões futuras.</p>
             <br>
-            <button class="c-btn"><a>Acessar nossa página no Gumroad</a></button>
+            <a class="c-btn" href="https://vinculodesign.gumroad.com/" target="_blank" rel="noopener noreferrer">Acessar nossa página no Gumroad</a>
         </section>
     </main>
     <footer class="bg-dark-green-2">
