VP-6 deleted meta description comment, added keywords

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <!-- Meta Description -->
     <meta name="description" content="Planilha gratuita de precificação para designers. Descomplica a formação de preço em projetos de design, promovendo valorização e apoio à comunidade de designers.">
+    <meta name="keywords" content="Planilha, precificação, design, valorização, comunidade, apoio, profissão, ferramenta gratuita">
     <!-- Apple Touch Icon (at least 200x200px) -->
     <link rel="apple-touch-icon" href="/custom-icon.png">
     <!-- To run the web application in full-screen -->
